<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="30dp"
    android:paddingTop="30dp"
    android:paddingRight="30dp"
    tools:context=".Activity.MainActivity">

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_txt"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/password_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AddIt_txt"
        app:layout_constraintVertical_bias="0.65999997" />


    <EditText
        android:id="@+id/password_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_txt"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        app:layout_constraintEnd_toEndOf="@+id/email_txt"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/email_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <ImageView
        android:id="@+id/logo_img"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        app:layout_constraintBottom_toBottomOf="@+id/AddIt_txt"
        app:layout_constraintDimensionRatio="4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/AddIt_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/AddIt_txt"/>

    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/primary_btn"
        android:fontFamily="@font/rubik_light"
        android:onClick="onClick"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_txt"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:fontFamily="@font/rubik_light"
        android:onClick="onClick"
        android:text="@string/sign_up_link"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/log_in_btn" />


        <TextView
            android:id="@+id/AddIt_txt"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:fontFamily="@font/rubik_light"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="60dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.74"
            app:layout_constraintStart_toEndOf="@+id/logo_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.18" />


    </androidx.constraintlayout.widget.ConstraintLayout>