<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.SignUpActivity">

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@drawable/primary_btn"
        android:fontFamily="@font/rubik_light"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,2:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass_confirm_txt"
        app:layout_constraintVertical_bias="0.35000002" />

    <EditText
        android:id="@+id/email_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/edit_txt"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/password_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/username_txt" />

    <EditText
        android:id="@+id/password_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/password"
        android:background="@drawable/edit_txt"
        android:padding="5dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/pass_confirm_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/email_txt" />

    <EditText
        android:id="@+id/pass_confirm_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/confirm_pass"
        android:background="@drawable/edit_txt"
        android:padding="5dp"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/sign_up_btn"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/password_txt" />

    <EditText
        android:id="@+id/username_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:hint="@string/name"
        android:background="@drawable/edit_txt"
        android:padding="5dp"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/email_txt"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/rubik_light"
        android:text="@string/sign_up"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/username_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_begin="25dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="25dp"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>