<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="10dp"
    android:layout_marginBottom="20dp"
    android:layout_marginHorizontal="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/add_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_plus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.93"
            app:layout_constraintStart_toEndOf="@+id/userEmail"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.71000004" />


        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:text="@string/name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/userEmail"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:text="@string/manager"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/userName"
            app:layout_constraintEnd_toEndOf="@+id/add_user"
            app:layout_constraintHorizontal_bias="0.29"
            app:layout_constraintStart_toEndOf="@+id/userName"
            app:layout_constraintTop_toTopOf="@+id/userName"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/userEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:text="@string/email"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/userAvatar"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/userAvatar"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/ic_profile"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="4dp"
            app:civ_shadow="true"
            app:civ_shadow_color="#3f51b5"
            app:civ_shadow_radius="11"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>