<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragment.EditItemFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">

       <androidx.constraintlayout.widget.ConstraintLayout
           android:id="@+id/item"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:background="@color/colorPrimaryDark"
           app:layout_constraintDimensionRatio="1:0.7"
           app:layout_constraintTop_toTopOf="parent"
           tools:layout_editor_absoluteX="211dp">


           <TextView
               android:id="@+id/textView5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginEnd="9dp"
               android:text="@string/item_name"
               android:textColor="#FFFFFF"
               android:textSize="15dp"
               app:layout_constraintBottom_toBottomOf="@+id/itemName"
               app:layout_constraintEnd_toStartOf="@+id/itemName"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="@+id/itemName" />

           <EditText
               android:id="@+id/itemName"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:fontFamily="@font/rubik_light"
               android:text="@string/item_name"
               android:textColor="#FFFFFF"
               android:textSize="40dp"
               android:textStyle="bold"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/avatar"
               app:layout_constraintVertical_bias="0.51" />

           <com.mikhaellopez.circularimageview.CircularImageView
               android:id="@+id/item_photo"
               android:layout_width="150dp"
               android:layout_height="150dp"
               android:src="@drawable/ic_big_cart"
               app:civ_border_color="#FFFFFF"
               app:civ_border_width="4dp"
               app:civ_shadow="true"
               app:civ_shadow_color="#3f51b5"
               app:civ_shadow_radius="1"
               app:layout_constraintBottom_toTopOf="@+id/textView5"
               app:layout_constraintDimensionRatio="1:1"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent" />

       </androidx.constraintlayout.widget.ConstraintLayout>

       <EditText
           android:id="@+id/price"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/rubik_light"
           android:hint="@string/price"
           android:inputType="number"
           android:textSize="20dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/amount"
           app:layout_constraintVertical_bias="0.13" />

       <EditText
           android:id="@+id/amount"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/rubik_light"
           android:hint="@string/amount"
           android:inputType="number"
           android:textSize="20dp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/item"
           app:layout_constraintVertical_bias="0.060000002" />

       <Button
           android:id="@+id/update_item_btn"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/update"
           android:background="@drawable/white_purple_btn"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/price" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/rubik_light"
           android:text="@string/amount"
           android:textSize="15dp"
           app:layout_constraintBottom_toBottomOf="@+id/amount"
           app:layout_constraintEnd_toStartOf="@+id/amount"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/amount" />

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:fontFamily="@font/rubik_light"
           android:text="@string/price"
           android:textSize="15dp"
           app:layout_constraintBottom_toBottomOf="@+id/price"
           app:layout_constraintEnd_toStartOf="@+id/price"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="@+id/price" />


   </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>