<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/logout_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.19"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_icon"
            app:layout_constraintVertical_bias="0.13" />


        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="0dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile"
            app:layout_constraintVertical_bias="0.13" />


        <TextView
            android:id="@+id/user_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:text="@string/email"
            android:textColor="#000000"
            android:textSize="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/email_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/email_icon"
            app:layout_constraintTop_toTopOf="@+id/email_icon" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/profile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintDimensionRatio="1:0.7"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik_light"
                android:text="@string/name"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/avatar"
                app:layout_constraintStart_toStartOf="@+id/avatar"
                app:layout_constraintTop_toBottomOf="@+id/avatar" />


            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/avatar"
                android:layout_width="167dp"
                android:layout_height="173dp"
                android:src="@drawable/ic_profile"
                app:civ_border_color="#FFFFFF"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_color="#3f51b5"
                app:civ_shadow_radius="10"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_edit"
            android:text="edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>